added nested comments

--- a/static/style.css
+++ b/static/style.css
@@ -1,138 +1,8 @@
-.disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
 body {
-    background-color: #a4daff; /* Lighter shade for a fresher look */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern and readable font */
-    color: #4A4A4A; /* Slightly darker text for better readability */
-}
-
-.navbar-brand, .post-item h5 {
-    color: #18BC9C; /* Calm green for emphasis and branding */
-    font-weight: bold;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: #ECF0F1; /* Ensuring navbar links are visible */
-}
-
-.btn-outline-light {
-    border-color: #18BC9C;
-    color: #18BC9C;
-}
-
-.btn-outline-light:hover {
-    background-color: #18BC9C;
-    color: #ECF0F1;
-}
-
-.header-bar {
-    background-color: #34495E; /* Dark blue shade for a professional look */
-    color: #ECF0F1; /* Light text color for contrast */
-    padding: 10px 0;
-    text-align: center;
-}
-
-.footer-bar {
-    background-color: #34495E;
-    color: #ECF0F1;
-    padding: 10px 0;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.login-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.form-control {
-    margin-bottom: 10px;
-}
-
-.post-item {
-    border-left: 5px solid #3498DB;
-    background-color: #ffffff;
-    margin-bottom: 10px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-
-
-.post-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
-
-.post-item h5 {
-    color: #18BC9C;
-    margin-bottom: 5px;
-}
-
-.post-item p {
-    color: #1f567a;
-}
-
-.post-item small {
-    font-weight: 600;
-}
-
-.post-container {
-    background-color: #ffffff;
-    margin-top: 20px;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-    border-left: 5px solid #5cb85c;
-}
-
-.comments-container {
-    margin-top: 20px;
-}
-
-.comment {
-    background-color: #e9ecef;
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 8px;
-    border-left: 3px solid #0275d8;
-}
-
-.card {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-    background-color: #3498DB;
-    color: #FFFFFF;
-}
-
-.list-group-item {
-    border: none; /* Cleaner look for list items */
-}
-
-h2,
-h3 {
-    color: #18BC9C;
-}
-
-p {
-    color: #000000;
-}
-
-h2, h3, h5, p, .navbar-brand, .list-group-item {
-    font-weight: normal; /* Avoiding overly bold fonts for a lighter appearance */
-}
-
-.replyBox {
-  display : none;
-}
+    background-color: #f0f2f5; /* A light gray background for the body */
+  }
+  .footer-bar {
+      position: fixed;
+bottom: 0;
+width: 100%;    
+  }
