--- a/haskread-platform-ui/static/style.css
+++ b/haskread-platform-ui/static/style.css
@@ -2,4 +2,5 @@ body { background-color: #F4EEFF;}
 .navbar-bg { background: linear-gradient(90deg, #424874, #DCD6F7); }
 .card-bg {background: linear-gradient(120deg, #DCD6F7, #F4EEFF);}
 .footer-bg { background-color: #424874; }
-
+:disabled {background-color:gray; color:white}
+:disabled:hover {background-color:gray; color:white}
